Bug 53280 - : FILE SAVE AS: Can not edit read-only file after SAVE AS
Summary: : FILE SAVE AS: Can not edit read-only file after SAVE AS
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: Other All
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: BSA target:3.7.0 target:3.6.1
Keywords: regression
: 52985 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-09 08:43 UTC by Milen Halkov
Modified: 2012-08-31 13:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Milen Halkov 2012-08-09 08:43:18 UTC
Problem description: 
FILE SAVE AS: When opening read-only file and `saving as` somewhere else the file stays read-only until closing file and reopening from the new location.

Steps to reproduce:
1. Make ODT file read-only
2. Open file (it says it read-only and can not edit file)
3. Save as ODT somewhere on another place
4. File stays read-only and can not edit

Current behavior:
When opening read-only file and `saving as` somewhere else the file stays read-only until closing file and reopening from the new location.

Expected behavior:
When open a read-only file and save it at new location with SAVE AS option to remove read-only mark and to be able to edit the file as in version 3.5.5

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 5.1; rv:14.0) Gecko/20100101 Firefox/14.0.1
Comment 1 billhook 2012-08-10 00:11:30 UTC
I just had this exact same problem. I don't know whether it is intended to work like that or not. It would seem to make sense to change to non read-only if you save the document as something else.
Comment 2 Jean-Baptiste Faure 2012-08-11 08:49:19 UTC
Under Ubuntu 11.10 with gnome-shell when I open a read-only file, I can only save it under another name. The new file is still marked as read only in the title bar of LO and formatting toolbar is not displayed. But if I click on the Edit button I can modify the file.
On the other hand, if I don't click the Edit button but reload the file (menu File > Reload) I can edit the file.

@Stephan: as you worked on this for LO 3.6, can you confirm that this is the expected behavior ?

Best regards. JBF
Comment 3 Stephan Bergmann 2012-08-15 07:44:16 UTC
Looks indeed like a regression introduced with <http://cgit.freedesktop.org/libreoffice/core/commit/?id=b9ecec7c74687ed5a9470cffb7d02e0e6e83107e> "Allow for editing of read-only documents."
Comment 4 Stephan Bergmann 2012-08-15 07:50:31 UTC
(In reply to comment #2)
> Under Ubuntu 11.10 with gnome-shell when I open a read-only file, I can only
> save it under another name. The new file is still marked as read only in the
> title bar of LO and formatting toolbar is not displayed. But if I click on the
> Edit button I can modify the file.
> On the other hand, if I don't click the Edit button but reload the file (menu
> File > Reload) I can edit the file.

Just to clarify:  After you "File - Save As..." the r/o file, the new file becomes editable by either clicking "Edit File" or doing "File - Reload," right?
Comment 5 Not Assigned 2012-08-16 15:57:13 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4e923fb5a293ce570974e620b87ff84ccb6a139b

fdo#53280: Reset read-only UI after successful Save As
Comment 6 Not Assigned 2012-08-16 16:14:50 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9c2588950be1d4b3051586359175b5a643fee880&g=libreoffice-3-6

fdo#53280: Reset read-only UI after successful Save As


It will be available in LibreOffice 3.6.2.
Comment 7 Not Assigned 2012-08-17 12:37:03 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b153ad73e618dc1600394ffbd98ad4b8bd918cd&g=libreoffice-3-6-1

fdo#53280: Reset read-only UI after successful Save As


It will be available already in LibreOffice 3.6.1.
Comment 8 Jean-Baptiste Faure 2012-08-21 05:08:21 UTC
(In reply to comment #4)
> [...]
> Just to clarify:  After you "File - Save As..." the r/o file, the new file
> becomes editable by either clicking "Edit File" or doing "File - Reload,"
> right?

Right.
Sorry for the late answer, I was on vacation.

Thank you for having fixed this bug.
Verified on Version 3.6.2.0+ (Build ID: 9b1f4aa)

Best regards. JBF
Comment 9 Stephan Bergmann 2012-08-24 08:16:20 UTC
*** Bug 52985 has been marked as a duplicate of this bug. ***