fdo#53280: Reset read-only UI after successful Save As

Change-Id: Ica9214d3655df27bbb259c463a7589a842f01c47